# castles

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  detection.yml  provider.yml  setup.yml
.github/workflows/: ci.yml  pages.yml  security.yml
docs/: architecture.md  corpus.md  detection.md  oauth.md  privacy.md  providers.md  storage.md  verification.md
site/: CNAME  index.html  install  privacy.html  setup.html  style.css  support.html
src/castles/: __init__.py  __main__.py  wiring.py
src/castles/app/: doctor.py  export.py  port.py  results.py  scan.py  setup.py  show.py
src/castles/cli/: main.py  setup.py  view.py
src/castles/config/: __init__.py  path.py  setting.py
src/castles/core/: __init__.py  entity.py  error.py  finding.py  message.py  scan.py  score.py  signal.py
src/castles/detect/: __init__.py  assess.py  build.py  evidence.py  extract.py  infra.py  resolve.py  suffix.py
src/castles/detect/data/: SUFFIX_NOTICE.txt  infra.toml
src/castles/parse/: __init__.py  html.py  mime.py  url.py
src/castles/provider/: __init__.py  port.py
src/castles/provider/gmail/: __init__.py  auth.py  client.py  loopback.py
src/castles/store/: __init__.py  codec.py  lock.py  port.py  sqlite.py
src/castles/store/sql/: 001_init.sql
tests/: foundation.py  installer.py  release.py  website.py
tests/cli/: main.py
tests/corpus/: __init__.py  judge.py  load.py  schema.py  test.py
tests/corpus/cases/: __init__.py  identity.py  infra.py  privacy.py  relation.py  resolve.py  score.py
tests/integration/: scan.py  wiring.py
tests/unit/: app.py  config.py  core.py  detect.py  gmail.py  oauth.py  parse.py  setup.py  store.py
